// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalMenu renders markup with state 1`] = `
<ng-ais-hierarchical-menu
  limit={[Function Number]}
  searchInstance={[Function NgAisInstance]}
  separator={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-HierarchicalMenu"
  >
    
        
    <ng-ais-header
      classname="ais-HierarchicalMenu-header ais-header"
      ng-reflect-class-name="ais-HierarchicalMenu-header ai"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-HierarchicalMenu-body ais-body"
    >
      
          
      <ul
        class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0"
      >
        
            
        
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
            ng-reflect-ng-class="[object Object]"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected"
            ng-reflect-ng-class="[object Object]"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            <ul
              class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl1"
            >
              
          
              
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                  ng-reflect-ng-class="[object Object]"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                  ng-reflect-ng-class="[object Object]"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                  ng-reflect-ng-class="[object Object]"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              <ng-ais-hierarchical-menu-item
                ng-reflect-create-u-r-l="function () {
          return f"
                ng-reflect-item="[object Object]"
                ng-reflect-lvl="2"
                ng-reflect-refine="function () {
          return f"
              >
                
      
                <li
                  class="ais-HierarchicalMenu-item"
                  ng-reflect-ng-class="[object Object]"
                >
                  
        
                  <a
                    class="ais-HierarchicalMenu-link"
                    href=""
                  >
                    
          
          
                    <span
                      class="ais-HierarchicalMenu-count"
                    >
                      
            100
          
                    </span>
                    
        
                  </a>
                  
  
        
                  
                  
      
                </li>
                
    
              </ng-ais-hierarchical-menu-item>
              
        
            </ul>
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
            ng-reflect-ng-class="[object Object]"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
            ng-reflect-ng-class="[object Object]"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        <ng-ais-hierarchical-menu-item
          ng-reflect-create-u-r-l="function () {
          return f"
          ng-reflect-item="[object Object]"
          ng-reflect-refine="function () {
          return f"
        >
          
      
          <li
            class="ais-HierarchicalMenu-item"
            ng-reflect-ng-class="[object Object]"
          >
            
        
            <a
              class="ais-HierarchicalMenu-link"
              href=""
            >
              
          
          
              <span
                class="ais-HierarchicalMenu-count"
              >
                
            100
          
              </span>
              
        
            </a>
            
  
        
            
            
      
          </li>
          
    
        </ng-ais-hierarchical-menu-item>
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-HierarchicalMenu-footer ais-footer"
      ng-reflect-class-name="ais-HierarchicalMenu-footer ai"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-hierarchical-menu>
`;

exports[`HierarchicalMenu renders markup without state 1`] = `
<ng-ais-hierarchical-menu
  limit={[Function Number]}
  searchInstance={[Function NgAisInstance]}
  separator={[Function String]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-HierarchicalMenu"
  >
    
        
    <ng-ais-header
      classname="ais-HierarchicalMenu-header ais-header"
      ng-reflect-class-name="ais-HierarchicalMenu-header ai"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-HierarchicalMenu-body ais-body"
    >
      
          
      <ul
        class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0"
      >
        
            
        
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-HierarchicalMenu-footer ais-footer"
      ng-reflect-class-name="ais-HierarchicalMenu-footer ai"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-hierarchical-menu>
`;
